syntax = "proto3";

package ir.sndu.server;

import "api/apipeer.proto";

service ContactService {
    rpc SearchContacts(RequestSearchContacts) returns (ResponseSearchContacts) {}
}

message RequestSearchContacts{
    string query = 1;
}

message ResponseSearchContacts{
    repeated ApiOutPeer peers = 1;
}
